@@ -4,7 +4,7 @@ function out = cg_vbm_longitudinal_multi_run(job)
 % Christian Gaser
 % $Id$
 
-global data_long opts extopts output
+global data_long opts extopts output modulate
 
 warning off;
 
@@ -12,6 +12,7 @@ warning off;
 opts = job.opts;
 extopts = job.extopts;
 output = job.output;
+modulate = job.modulate;
 
 for i=1:numel(job.subj),
     out(i).files = cell(numel(job.subj(i).mov),1);
@@ -19,7 +20,14 @@ for i=1:numel(job.subj),
     data = cell(m,1);
     for j=1:m
         [pth,nam,ext,num] = spm_fileparts(job.subj(i).mov{j});
-        out(i).files{j} = fullfile(pth,['wp1m', nam, ext, num]);
+        switch modulate
+        case 0
+          out(i).files{j} = fullfile(pth,['wp1r', nam, ext, num]);
+        case 1
+          out(i).files{j} = fullfile(pth,['mwp1r', nam, ext, num]);
+        case 2
+          out(i).files{j} = fullfile(pth,['m0wp1r', nam, ext, num]);
+        end
         data{j} = job.subj(i).mov{j};
     end
     data_long = data;
